@@ -20,6 +20,7 @@
     <File name="ChangeLog" subtype="Code" buildaction="Nothing" />
     <File name="AvoidDeepInheritanceTreeTest.cs" subtype="Code" buildaction="Compile" />
     <File name="PreferStringIsNullOrEmptyTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidUnnecessarySpecializationTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -29,4 +30,5 @@
     <ProjectReference type="Project" localcopy="True" refto="Mono.Cecil" />
     <ProjectReference type="Project" localcopy="True" refto="Test.Rules" />
   </References>
+  <GtkDesignInfo gtkVersion="2.8.4" />
 </Project>
