@@ -1,6 +1,12 @@
+2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidUnnecessarySpecializationTest.cs: Test cases for
+	AvoidUnnecessarySpecializationRule [committed for Cedric Vivier]
+	* Test.Rules.Maintainability.mdp: Update MD project files.
+
 2008-07-11  Sebastien Pouliot  <sebastien@ximian.com>
 
-	* AvoidDeepInheritanceTreeRule.cs: A second set of test cases
+	* AvoidDeepInheritanceTreeTest.cs: A second set of test cases
 	for the (new) default rule behaviour, working on the set of
 	assemblies only (not the whole resolvable framework). Patch by
 	Cedric Vivier.
